--- a/hobbies.html
+++ b/hobbies.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -12,10 +13,20 @@
 </head>
 <body>
     <h1>My Hobbies</h1>
-    <nav class = "navbar">
-        <a href = "index.html">Home</a>
-        <a href = "hobbies.html">My Hobbies</a>
-        <a href = "projects.html">My Projects</a>
+    <nav class="navbar navbar-expand-lg navbar-brown bg-pink">
+        <div class="container">
+            <a class="navbar-brand" href="#">About me</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="hobbies.html">My Hobbies</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">My Projects</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <div class ="header-section2">
@@ -41,5 +52,6 @@
             <img src = "IMG_7915.JPG"height = '514.66' width = "386">
         </ul>
     </pictures>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
