--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .header-section {background-color: lightpink; padding: 20px; }
         .navbar {background-color: #fddde6; padding: 10px;}
-        .text {color: white; }
+        .text {color: white; text-center; }
     </style>
     <title>Lis Oguntona Portfolio</title>
 </head>
 <body>
     <!-- TODO: Build your portfolio here! -->
     <div class = "header-section">
-        <h1 class="text">Meet: Elisabeth Oguntona!</h1>
+        <h1 class="text" >Meet: Elisabeth Oguntona!</h1>
     </div>
-    <nav class = "navbar">
-        <a href = "index.html">Home</a>
-        <a href = "hobbies.html">My Hobbies</a>
-        <a href = "projects.html">My Projects</a>
+    <nav class="navbar navbar-expand-lg navbar-brown bg-pink">
+        <div class="container">
+            <a class="navbar-brand" href="#">About me</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="hobbies.html">My Hobbies</a></li>
+                    <li class="nav-item"><a class="nav-link" href="projects.html">My Projects</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
+    
     <img src  = "IMG_5517.JPG" height = '514.66' width = "386">
     <h4> Hi! My name is Lis and I'm a senior! My major is Computer Science with a minor in Graphic Design and Cybersecurity.
         <br> If you want to know a little more about me, feel free to go through my page! < 3 
@@ -33,6 +45,7 @@
         <p>I'm in a business fraternity called Alpha Kappa Psi the Beta Phi chapter, and I am Vice President of PR!
             <br> I'm also Vice President of Interfaith!
         </p> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
