Implement responsive layout and project section with icons - chose [approach] for [reasons]

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         .header-section {background-color: lightpink; padding: 20px; }
         .navbar {background-color: #fddde6; padding: 10px;}
-        .text {color: white; text-center; }
+        .text {color: white; }
     </style>
     <title>Lis Oguntona Portfolio</title>
 </head>
@@ -31,11 +31,22 @@
             </div>
         </div>
     </nav>
-    
-    <img src  = "IMG_5517.JPG" height = '514.66' width = "386">
-    <h4> Hi! My name is Lis and I'm a senior! My major is Computer Science with a minor in Graphic Design and Cybersecurity.
-        <br> If you want to know a little more about me, feel free to go through my page! < 3 
-    </h4>
+    <section class="py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h1>Hi! My name is Lis and I'm a senior at Drake! </h1>
+                    <p>My major is Computer Science with a minor in Graphic Design and Cybersecurity.
+                        If you want to know a little more about me, feel free to go through my page! < 3 
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <img src  = "IMG_5517.JPG" height = '514.66' width = "386">
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr class=".custom-divider ">
     <h4>Education</h4>
         <p>Drake University: 2023-2026</p>
         <p>Imagine International Academy of North Texas: From 3rd grade till 12th grade</p>
