--- a/projects.html
+++ b/projects.html
@@ -9,13 +9,13 @@
         .navbar {background-color: #fddde6; padding: 10px;}
         .text {color: white; }
     </style>
-    <title>My Projects</title>
+    <title>Lis Oguntona</title>
 </head>
 <body>
-    <h1>Future Projects</h1>
+    <h1>Lis Oguntona</h1>
     <nav class="navbar navbar-expand-lg navbar-brown bg-pink">
         <div class="container">
-            <a class="navbar-brand" href="#">About me</a>
+            <a class="navbar-brand" href="#">My projects</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,10 +29,24 @@
         </div>
     </nav>
     <div>
-        <h4><emphasized> Coming soon! </emphasized>
 
         </h4>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <div class="row g-4">
+        <div class="col-lg-4 col-md-6">
+            <div class="card h-100">
+                <img src="wordle.png" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Wordle</h5>
+                    <p class="card-text">Created a replica of the wordle game!(although at one point the colors worked but now they need to be reporgramed..)</p>
+                    <a href="#" class="btn btn-primary">View Project</a>
+                </div>
+            </div>
+        </div>
+        <!-- Repeat for more projects -->
+    </div>
+    
 </body>
 </html>
